--- a/app/src/main/res/layout/activity_guidlines.xml
+++ b/app/src/main/res/layout/activity_guidlines.xml
@@ -10,11 +10,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
     <LinearLayout
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="@dimen/dots_margin_bottom"
+        android:layout_height="wrap_content">
+    <LinearLayout
         android:id="@+id/layoutDots"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dots_height"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="@dimen/dots_margin_bottom"
+
         android:gravity="center"
         android:orientation="horizontal"></LinearLayout>
 
@@ -27,5 +32,8 @@
         android:layout_alignParentLeft="true"
         android:background="@null"
         android:text="@string/skip"
+        android:textAllCaps="false"
+        android:layout_gravity="center"
         android:textColor="@android:color/white" />
+    </LinearLayout>
 </RelativeLayout>
