--- a/app/src/main/res/layout/activity_select_region.xml
+++ b/app/src/main/res/layout/activity_select_region.xml
@@ -18,6 +18,7 @@
         android:layout_height="wrap_content" />
 
     <RelativeLayout
+        android:layout_below="@id/map"
         android:layout_centerInParent="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
