--- a/app/src/main/res/drawable/shadow_button.xml
+++ b/app/src/main/res/drawable/shadow_button.xml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle"   >
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid
-        android:color="@color/yellow_1" >
-    </solid>
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="#BDBDBD"/>
+            <corners android:radius="5dp"/>
+        </shape>
+    </item>
 
-    <corners
-        android:radius="5dp"   >
-    </corners>
-
-</shape>
+    <item
+        android:left="0dp"
+        android:right="0dp"
+        android:top="0dp"
+        android:bottom="2dp">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/yellow_1"/>
+            <corners android:radius="5dp"/>
+        </shape>
+    </item>
+</layer-list>
