--- a/app/src/main/res/layout/activity_guidlines.xml
+++ b/app/src/main/res/layout/activity_guidlines.xml
@@ -32,6 +32,8 @@
         android:layout_alignParentLeft="true"
         android:background="@null"
         android:text="@string/skip"
+        android:fontFamily="@font/calibri"
+        android:textSize="@dimen/slide_title"
         android:textAllCaps="false"
         android:layout_gravity="center"
         android:textColor="@android:color/white" />
