--- a/app/src/main/res/layout/guidelines_item.xml
+++ b/app/src/main/res/layout/guidelines_item.xml
@@ -12,6 +12,8 @@
         android:layout_height="wrap_content"
         android:text="@string/watch_out_big_cars"
         android:textColor="@color/white"
+        android:fontFamily="@font/calibri"
+
         android:layout_alignParentTop="true"
         android:layout_marginBottom="@dimen/slide_title"
         android:textSize="@dimen/slide_title"
@@ -31,6 +33,8 @@
         android:layout_marginTop="20dp"
         android:text="@string/stay_away"
         android:textAlignment="center"
+        android:fontFamily="@font/calibri"
+
         android:layout_below="@id/image_guideline"
         android:textColor="@android:color/black"
         android:textSize="@dimen/slide_desc" />
