--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,5 +13,6 @@
     <dimen name="guidelines_image_size">200dp</dimen>
     <dimen name="guidelines_image_border">7dp</dimen>
     <dimen name="bottom_tab_text">14sp</dimen>
-
+    <dimen name="margin_left">40dp</dimen>
+    <dimen name="item_size">80dp</dimen>
 </resources>
