--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -40,4 +40,8 @@
     <color name="geofence_stroke_color">#F6F1DC</color>
     <color name="profile_text_color">#2F3A4B</color>
     <color name="line">#C1C1C1</color>
+    <color name="dark_yellow">#E4C24A</color>
+    <color name="toolbar_color">#FCFCFC</color>
+    <color name="title_color">#475261</color>
+    <color name="dark_blue">#44B4C1</color>
 </resources>
