--- a/app/src/main/res/layout/activity_feed_list.xml
+++ b/app/src/main/res/layout/activity_feed_list.xml
@@ -8,6 +8,7 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rvFeed"
+            android:layout_marginTop="10dp"
             android:scrollbars="none"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
