--- a/app/src/main/res/layout/activity_user_login.xml
+++ b/app/src/main/res/layout/activity_user_login.xml
@@ -42,7 +42,7 @@
 
             <Button
                 android:id="@+id/facebook_button"
-                style="@style/AppTheme.RoundedCornerMaterialButton"
+                style="@style/RoundedCornerMaterialButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
