--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -15,4 +15,6 @@
     <dimen name="bottom_tab_text">16sp</dimen>
     <dimen name="margin_left">50dp</dimen>
     <dimen name="item_size">100dp</dimen>
+    <dimen name="dialog_size_width">400dp</dimen>
+    <dimen name="dialog_size_height">400dp</dimen>
 </resources>
