--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,4 +15,6 @@
     <dimen name="bottom_tab_text">14sp</dimen>
     <dimen name="margin_left">40dp</dimen>
     <dimen name="item_size">80dp</dimen>
+    <dimen name="dialog_size_width">300dp</dimen>
+    <dimen name="dialog_size_height">300dp</dimen>
 </resources>
