--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,8 +8,14 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
-    <style name="AppTheme.RoundedCornerMaterialButton" parent="Widget.AppCompat.Button.Colored">
+    <style name="RoundedCornerMaterialButton" parent="Widget.AppCompat.Button.Colored">
         <item name="android:background">@drawable/rounded_shape</item>
+    </style>
+    <style name="RoundedCornerMaterialButtonYellow" parent="Widget.AppCompat.Button.Colored">
+        <item name="android:background">@drawable/rounded_shape_yellow</item>
+    </style>
+    <style name="RoundedCornerMaterialButtonBlue" parent="Widget.AppCompat.Button.Colored">
+        <item name="android:background">@drawable/rounded_shape_blue</item>
     </style>
     <style name="AppTheme.ShadowButton" parent="Widget.AppCompat.Button.Colored">
         <item name="android:background">@color/yellow_1</item>
@@ -20,4 +26,8 @@
         <!-- Support library compatibility -->
         <item name="windowActionBarOverlay">true</item>
     </style>
-</resources>
+
+    <style name="FullHeightDialog" parent="android:style/Theme.Dialog">
+        <item name="android:windowNoTitle">true</item>
+    </style>
+ </resources>
