--- a/app/src/main/res/layout/activity_user_login.xml
+++ b/app/src/main/res/layout/activity_user_login.xml
@@ -44,7 +44,7 @@
                 android:id="@+id/facebook_button"
                 style="@style/RoundedCornerMaterialButton"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/button_height"
                 android:layout_centerInParent="true"
                 android:layout_marginTop="32dp"
                 android:textAllCaps="false"
