--- a/app/src/main/res/layout/add_incident_location_pop_up.xml
+++ b/app/src/main/res/layout/add_incident_location_pop_up.xml
@@ -30,35 +30,46 @@
             android:text="@string/add_incident_location"
             android:layout_width="wrap_content"
             android:textSize="@dimen/slide_desc"
+            android:textStyle="bold"
+            android:layout_marginTop="@dimen/margin_top"
             android:textColor="@color/title_color"
             android:layout_height="wrap_content" />
-        <LinearLayout
-            android:gravity="center"
-            android:padding="20dp"
-            android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:layout_height="match_parent">
 
-        <Button
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/add_your_current_location"
-            style="@style/RoundedCornerMaterialButtonYellow"
-            />
-            <TextView
-                android:layout_marginBottom="15dp"
-                android:layout_marginTop="15dp"
-                android:layout_width="wrap_content"
-                android:text="@string/or"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="20dp">
+
+            <Button
+                style="@style/RoundedCornerMaterialButtonYellow"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
                 android:textSize="@dimen/slide_desc"
+                android:textAllCaps="false"
+                android:layout_marginTop="@dimen/margin_top"
+                android:text="@string/add_your_current_location" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
+                android:text="@string/or"
                 android:textColor="@color/title_color"
-                android:layout_height="wrap_content" />
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/add_your_current_location"
-            style="@style/RoundedCornerMaterialButtonBlue"
-            />
+                android:textSize="@dimen/slide_desc" />
+
+            <Button
+                style="@style/RoundedCornerMaterialButtonBlue"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textAllCaps="false"
+
+                android:textSize="@dimen/slide_desc"
+                android:text="@string/select_location_from_map" />
         </LinearLayout>
     </RelativeLayout>
     </RelativeLayout>
