--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,6 +15,11 @@
     <dimen name="bottom_tab_text">14sp</dimen>
     <dimen name="margin_left">40dp</dimen>
     <dimen name="item_size">80dp</dimen>
+    <dimen name="margin_top">10dp</dimen>
     <dimen name="dialog_size_width">300dp</dimen>
     <dimen name="dialog_size_height">300dp</dimen>
+    <dimen name="button_height">50dp</dimen>
+    <dimen name="slide_title_dialog">14sp</dimen>
+    <dimen name="margin_from_top_login_pop_up">20dp</dimen>
+
 </resources>
