--- a/app/src/main/res/layout/fragment_incident_maps.xml
+++ b/app/src/main/res/layout/fragment_incident_maps.xml
@@ -4,11 +4,48 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.google.android.gms.maps.MapView
-        android:id="@+id/mapview"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
 
 
+        <com.google.android.gms.maps.MapView
+            android:id="@+id/mapview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="visible" />
 
+        <LinearLayout
+            android:id="@+id/llFilterIncident"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
+                android:text="@string/all_incidents"
+                android:textColor="@color/title_color"
+                android:textSize="@dimen/slide_desc" />
+
+            <ImageView
+                android:layout_marginLeft="10dp"
+                android:layout_gravity="center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/down_arrow" />
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/ivAddPost"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="25dp"
+            android:layout_alignParentRight="true"
+            android:src="@drawable/add_post_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
 </RelativeLayout>
