--- a/app/src/main/res/layout/fragment_notification.xml
+++ b/app/src/main/res/layout/fragment_notification.xml
@@ -8,6 +8,7 @@
     >
 
     <LinearLayout
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -34,7 +35,6 @@
     </LinearLayout>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvNotification"
-        android:layout_marginTop="60dp"
         android:scrollbars="none"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
