--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".view.settings.SettingsFragment">
+    tools:context=".view.fragments.SettingsFragment">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -12,7 +12,6 @@
         android:scrollbars="none">
 
         <LinearLayout
-            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
