--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -23,4 +23,5 @@
     <dimen name="margin_from_top_login_pop_up">20dp</dimen>
     <dimen name="alert_dialog_size_height">230dp</dimen>
     <dimen name="alert_margin_top">50dp</dimen>
+    <dimen name="detail_backdrop_height">250dp</dimen>
 </resources>
