--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -23,4 +23,6 @@
     <dimen name="margin_from_top_login_pop_up">40dp</dimen>
     <dimen name="alert_dialog_size_height">300dp</dimen>
     <dimen name="alert_margin_top">80dp</dimen>
+    <dimen name="detail_backdrop_height">250dp</dimen>
+
 </resources>
