--- a/app/src/main/res/layout/fragment_add_incident.xml
+++ b/app/src/main/res/layout/fragment_add_incident.xml
@@ -27,6 +27,7 @@
 
             <android.support.v4.view.ViewPager
                 android:id="@+id/vp_adds"
+                android:fitsSystemWindows="true"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/detail_backdrop_height"
                 android:layout_gravity="center_horizontal"
