--- a/app/src/main/res/layout/fragment_incident_image_view_pager.xml
+++ b/app/src/main/res/layout/fragment_incident_image_view_pager.xml
@@ -2,10 +2,14 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:fitsSystemWindows="true"
+
     android:layout_height="match_parent"
     >
 
     <ImageView
+        android:fitsSystemWindows="true"
+
         android:id="@+id/iv_adds"
         android:layout_width="match_parent"
         android:layout_height="@dimen/detail_backdrop_height"
