--- a/app/src/main/res/layout/fragment_incident_maps.xml
+++ b/app/src/main/res/layout/fragment_incident_maps.xml
@@ -1,8 +1,21 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+android:id="@+id/bgLayout"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+
+    >
+    <ScrollView
+        android:fillViewport="true"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -49,3 +62,61 @@
             android:layout_height="wrap_content" />
     </RelativeLayout>
 </RelativeLayout>
+    </ScrollView>
+    <RelativeLayout
+        android:id="@+id/bottom_sheet2"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/view_height"
+        android:clipToPadding="true"
+        android:background="#4Dffffff"
+        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
+
+        <RelativeLayout
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_centerInParent="true"
+                android:padding="10dp"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_marginTop="5dp"
+                        android:layout_below="@id/tvIncidentDesc"
+                        android:id="@+id/tvIncidentCount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentLeft="true"
+                        android:maxLines="1"
+                        android:layout_marginLeft="10dp"
+                        android:textStyle="bold"
+                        android:textSize="@dimen/slide_title"
+                        android:text="09 hours ago"
+                        android:textColor="@color/green"
+                        />
+                    <ImageView
+                        android:layout_marginRight="5dp"
+                        android:id="@+id/ivIncidentArrow"
+                        android:layout_gravity="right"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:src="@drawable/added_icon" />
+                </RelativeLayout>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rvIncident"
+            android:scrollbars="none"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+            </LinearLayout>
+        </RelativeLayout>
+    </RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
