--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -24,5 +24,8 @@
     <dimen name="alert_dialog_size_height">300dp</dimen>
     <dimen name="alert_margin_top">80dp</dimen>
     <dimen name="detail_backdrop_height">250dp</dimen>
-
+    <dimen name="slide_title_min">16sp</dimen>
+    <dimen name="bottom_height">300dp</dimen>
+    <dimen name="bottom_width">210dp</dimen>
+    <dimen name="view_height">310dp</dimen>
 </resources>
