Current location on Map

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -28,4 +28,11 @@
     <dimen name="bottom_height">240dp</dimen>
     <dimen name="bottom_width">180dp</dimen>
     <dimen name="view_height">260dp</dimen>
+    <dimen name="marker_popup_width">260dp</dimen>
+    <dimen name="marker_popup_image_width">120dp</dimen>
+    <dimen name="bottom_height_marker_pop_up">160dp</dimen>
+    <dimen name="bottom_height_marker_pop_up_image">100dp</dimen>
+    <dimen name="bottom_height_marker_pop">115dp</dimen>
+    <dimen name="markr_pop_up_text_size">12sp</dimen>
+
 </resources>
