--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -28,4 +28,10 @@
     <dimen name="bottom_height">300dp</dimen>
     <dimen name="bottom_width">210dp</dimen>
     <dimen name="view_height">310dp</dimen>
+    <dimen name="marker_popup_width">310dp</dimen>
+    <dimen name="marker_popup_image_width">140dp</dimen>
+    <dimen name="bottom_height_marker_pop_up">190dp</dimen>
+    <dimen name="bottom_height_marker_pop_up_image">120dp</dimen>
+    <dimen name="bottom_height_marker_pop">135dp</dimen>
+    <dimen name="markr_pop_up_text_size">14sp</dimen>
 </resources>
