Add incident image

--- a/app/src/main/res/layout/fragment_add_incident.xml
+++ b/app/src/main/res/layout/fragment_add_incident.xml
@@ -36,16 +36,16 @@
 
             </android.support.v4.view.ViewPager>
 
-             <android.support.design.widget.TabLayout
-                 android:id="@+id/tab_layout"
-                 android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 android:layout_marginBottom="50dp"
-                 app:tabGravity="center"
-                 android:layout_gravity="bottom"
-                 app:tabBackground="@drawable/tab_selector"
-                 app:tabIndicatorHeight="0dp"
-                 />
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tab_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="50dp"
+                app:tabGravity="center"
+                android:layout_gravity="bottom"
+                app:tabBackground="@drawable/tab_selector"
+                app:tabIndicatorHeight="0dp"
+                />
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -82,6 +82,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <ImageView
+        android:id="@+id/ivAddImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/activity_horizontal_margin"
