--- a/app/src/main/res/layout/fragment_incident_image_view_pager.xml
+++ b/app/src/main/res/layout/fragment_incident_image_view_pager.xml
@@ -9,11 +9,11 @@
 
     <ImageView
         android:fitsSystemWindows="true"
-
+        android:adjustViewBounds="true"
         android:id="@+id/iv_adds"
         android:layout_width="match_parent"
         android:layout_height="@dimen/detail_backdrop_height"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         android:layout_alignParentTop="true"
         android:elevation="10dp"
         />
