--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -34,5 +34,6 @@
     <dimen name="bottom_height_marker_pop_up_image">90dp</dimen>
     <dimen name="bottom_height_marker_pop">115dp</dimen>
     <dimen name="markr_pop_up_text_size">12sp</dimen>
+    <dimen name="button_margin">28dp</dimen>
 
 </resources>
