--- a/app/src/main/res/layout/fragment_incident_maps.xml
+++ b/app/src/main/res/layout/fragment_incident_maps.xml
@@ -108,7 +108,7 @@ android:layout_height="match_parent"
                         android:layout_height="20dp"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
-                        android:src="@drawable/added_icon" />
+                        android:src="@drawable/up_arrow" />
                 </RelativeLayout>
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rvIncident"
