--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -34,4 +34,5 @@
     <dimen name="bottom_height_marker_pop_up_image">110dp</dimen>
     <dimen name="bottom_height_marker_pop">135dp</dimen>
     <dimen name="markr_pop_up_text_size">14sp</dimen>
+    <dimen name="button_margin">35dp</dimen>
 </resources>
