--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -43,6 +43,6 @@
     <color name="dark_yellow">#E4C24A</color>
     <color name="toolbar_color">#FCFCFC</color>
     <color name="title_color">#475261</color>
-    <color name="dark_blue">#44B4C1</color>
+    <color name="dark_blue">#27C3F0</color>
     <color name="grey">#A9A9A9</color>
 </resources>
