--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,9 +8,10 @@
     <dimen name="dots_margin_bottom">20dp</dimen>
     <dimen name="img_width_height">150dp</dimen>
     <dimen name="slide_title">18sp</dimen>
+    <dimen name="heading">22sp</dimen>
     <dimen name="slide_desc">18sp</dimen>
     <dimen name="desc_padding">20dp</dimen>
-    <dimen name="guidelines_image_size">200dp</dimen>
+    <dimen name="guidelines_image_size">250dp</dimen>
     <dimen name="guidelines_image_border">7dp</dimen>
     <dimen name="bottom_tab_text">14sp</dimen>
     <dimen name="margin_left">40dp</dimen>
