--- a/app/src/main/res/layout/activity_select_region.xml
+++ b/app/src/main/res/layout/activity_select_region.xml
@@ -29,10 +29,11 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="@string/select_region"
-
+            android:textStyle="bold"
             android:textColor="@color/white"
+            android:layout_centerHorizontal="true"
             android:gravity="center_horizontal"
-            android:textSize="@dimen/slide_title" />
+            android:textSize="@dimen/heading" />
 
         <android.support.v7.widget.CardView
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
