--- a/app/src/main/res/layout/fragment_add_incident.xml
+++ b/app/src/main/res/layout/fragment_add_incident.xml
@@ -55,6 +55,7 @@
                 android:layout_margin="10dp">
 
                 <ImageView
+                    android:id="@+id/ivback"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
