--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -8,9 +8,11 @@
     <dimen name="dots_margin_bottom">20dp</dimen>
     <dimen name="img_width_height">150dp</dimen>
     <dimen name="slide_title">22sp</dimen>
+    <dimen name="heading">26sp</dimen>
+
     <dimen name="slide_desc">22sp</dimen>
     <dimen name="desc_padding">20dp</dimen>
-    <dimen name="guidelines_image_size">300dp</dimen>
+    <dimen name="guidelines_image_size">350dp</dimen>
     <dimen name="guidelines_image_border">10dp</dimen>
     <dimen name="bottom_tab_text">16sp</dimen>
     <dimen name="margin_left">50dp</dimen>
