--- a/app/src/main/res/layout/add_incident_fields.xml
+++ b/app/src/main/res/layout/add_incident_fields.xml
@@ -18,34 +18,38 @@
         android:ems="10"
         android:includeFontPadding="true"
         android:paddingBottom="20dp"
+        android:paddingLeft="10dp"
         android:textColorHint="@color/title_color"
         android:hint="@string/description"
         android:textColor="@color/title_color" />
     <Spinner
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="20dp"
         android:includeFontPadding="true"
-        android:id="@+id/spninner"
+        android:id="@+id/spninnerCityHall"
+        android:paddingBottom="20dp"
         style="@style/Widget.AppCompat.Spinner.Underlined"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:spinnerMode="dropdown"/>
     <EditText
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:includeFontPadding="true"
         android:paddingBottom="20dp"
         android:id="@+id/etLocation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
+        android:editable="false"
+        android:enabled="false"
+        android:paddingLeft="10dp"
         android:textColorHint="@color/title_color"
         android:hint="@string/incident_location"
-        android:textColor="@color/title_color" />
+        android:textColor="@color/line" />
     <Spinner
         android:includeFontPadding="true"
         android:paddingBottom="20dp"
-        android:layout_marginTop="25dp"
-        android:id="@+id/spninner1"
-        android:paddingTop="10dp"
+        android:layout_marginTop="20dp"
+        android:id="@+id/spninnerType"
         style="@style/Widget.AppCompat.Spinner.Underlined"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
