--- a/app/src/main/res/layout/custom_info_window.xml
+++ b/app/src/main/res/layout/custom_info_window.xml
@@ -55,7 +55,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/ivIncident"
-                android:maxLines="4"
+                android:lines="4"
+                android:ellipsize="end"
                 android:layout_marginTop="3dp"
                 android:text="@string/stay_away"
                 android:textColor="@color/title_color"
@@ -65,6 +66,7 @@
 
         </LinearLayout>
         <Button
+            android:id="@+id/btnViewMore"
             style="@style/RoundedCornerMaterialButtonBlue"
             android:layout_width="match_parent"
             android:layout_height="@dimen/button_height"
