add location on map, report abuse, edit, delete incident

--- a/app/src/main/res/layout/fragment_incident_description.xml
+++ b/app/src/main/res/layout/fragment_incident_description.xml
@@ -74,6 +74,7 @@
                     />
 
                 <ImageView
+                    android:id="@+id/ivMenu"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_alignParentRight="true"
