--- a/app/src/main/res/layout/incident_item.xml
+++ b/app/src/main/res/layout/incident_item.xml
@@ -68,7 +68,7 @@
                 android:layout_centerInParent="true"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
-                android:src="@drawable/down_arrow" />
+                android:src="@drawable/right_arrow" />
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
