--- a/app/src/main/res/layout/report_abuse_comment_dailog.xml
+++ b/app/src/main/res/layout/report_abuse_comment_dailog.xml
@@ -24,15 +24,16 @@
         android:background="@drawable/dailog_border"
         android:layout_width="match_parent"
         android:layout_height="@dimen/alert_dialog_size_height">
-        <TextView
+        <EditText
+            android:id="@+id/etComment"
             android:layout_gravity="center_horizontal"
             android:layout_centerHorizontal="true"
-            android:text="@string/delete_alert_text"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:textSize="@dimen/slide_desc"
+            android:hint="@string/comment"
             android:padding="20dp"
-            android:gravity="center"
-            android:textStyle="bold"
+            android:gravity="left"
+            android:lines="1"
             android:layout_marginTop="@dimen/alert_margin_top"
             android:textColor="@color/title_color"
             android:layout_height="wrap_content" />
@@ -42,11 +43,11 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:weightSum="2"
+            android:weightSum="1"
             android:layout_alignParentBottom="true"
             android:layout_height="wrap_content">
             <Button
-                android:id="@+id/btnCancel"
+                android:id="@+id/btnSubmit"
                 style="@style/RoundedCornerMaterialButtonBlueOneCorner"
                 android:layout_width="0dp"
                 android:layout_weight="1"
@@ -55,18 +56,8 @@
                 android:textAllCaps="false"
                 android:layout_alignParentBottom="true"
                 android:textSize="@dimen/slide_desc"
-                android:text="@string/cancel" />
-            <Button
-                android:id="@+id/btnDelete"
-                style="@style/RoundedCornerMaterialButtonYellowOneCorner"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="@dimen/button_height"
-                android:textColor="@color/white"
-                android:textAllCaps="false"
-                android:layout_alignParentBottom="true"
-                android:textSize="@dimen/slide_desc"
-                android:text="@string/delete" />
+                android:text="@string/submit" />
+
         </LinearLayout>
     </RelativeLayout>
     </RelativeLayout>
