--- a/app/src/main/res/layout/report_abuse_comment_dailog.xml
+++ b/app/src/main/res/layout/report_abuse_comment_dailog.xml
@@ -34,6 +34,8 @@
             android:padding="20dp"
             android:gravity="left"
             android:lines="1"
+            android:focusable="true"
+            android:background="@null"
             android:layout_marginTop="@dimen/alert_margin_top"
             android:textColor="@color/title_color"
             android:layout_height="wrap_content" />
