image upload, abuse report

--- a/app/src/main/res/layout/abuse_pop_up.xml
+++ b/app/src/main/res/layout/abuse_pop_up.xml
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="15dp"
-            android:text="@string/report_abuse"
+            android:text="@string/report_abuse_"
             android:textColor="@color/dark_yellow"
             android:textSize="@dimen/slide_desc" />
 
