--- a/app/src/main/res/layout/report_abuse_comment_dailog.xml
+++ b/app/src/main/res/layout/report_abuse_comment_dailog.xml
@@ -23,22 +23,32 @@
         android:layout_centerInParent="true"
         android:background="@drawable/dailog_border"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/alert_dialog_size_height">
+        android:layout_height="@dimen/abuse_dialog_size">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/add_description"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="10dp"
+            android:textColor="@color/black"
+            android:textSize="@dimen/slide_desc" />
         <EditText
             android:id="@+id/etComment"
             android:layout_gravity="center_horizontal"
             android:layout_centerHorizontal="true"
             android:layout_width="match_parent"
             android:textSize="@dimen/slide_desc"
-            android:hint="@string/comment"
+            android:hint="@string/add_description_here"
             android:padding="20dp"
             android:gravity="left"
-            android:lines="1"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:focusable="true"
-            android:background="@null"
+            android:background="@drawable/edit_text_back"
             android:layout_marginTop="@dimen/alert_margin_top"
             android:textColor="@color/title_color"
-            android:layout_height="wrap_content" />
+            android:layout_height="180dp" />
 
 
 
@@ -50,7 +60,7 @@
             android:layout_height="wrap_content">
             <Button
                 android:id="@+id/btnSubmit"
-                style="@style/RoundedCornerMaterialButtonBlueOneCorner"
+                style="@style/RoundedCornerMaterialButtonBluetwoCorner"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="@dimen/button_height"
@@ -58,7 +68,7 @@
                 android:textAllCaps="false"
                 android:layout_alignParentBottom="true"
                 android:textSize="@dimen/slide_desc"
-                android:text="@string/submit" />
+                android:text="@string/report_abuse_" />
 
         </LinearLayout>
     </RelativeLayout>
