--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -38,4 +38,6 @@
     <dimen name="markr_pop_up_text_size">14sp</dimen>
     <dimen name="button_margin">35dp</dimen>
     <dimen name="profile_image_size">250dp</dimen>
+    <dimen name="abuse_dialog_size">350dp</dimen>
+
 </resources>
